[package]
name = "week2"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk                   = "3.0"
solana-client                = "3.1"
solana-program               = "3.0"
solana-program-pack          = "3.1"
solana-commitment-config     = "3.1"
spl-token                    = { version = "9", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8", features = ["no-entrypoint"] }
mpl-core                     = "0.12"
borsh                        = "1"
anyhow                       = "1"